# OOP244-Library-Application-Seneca

./: Book.cpp  Book.h  CMakeLists.txt  Date.cpp  Date.h  Lib.h  LibApp.cpp  LibApp.h  LibAppMain.cpp  Menu.cpp  Menu.h  Publication.cpp  Publication.h  PublicationSelector.h  README.md  Streamable.cpp  Streamable.h  Utils.cpp  Utils.h
